<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:gravity="center"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/setting_title"
        />

    <Switch
        android:id="@+id/switch_chess"
        android:textSize="18sp"
        android:text="@string/is_chess_scanner"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="center"
        />

    <Switch
        android:id="@+id/switch_voice"
        android:textSize="18sp"
        android:text="@string/is_play_voice"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="center"
        />

    <Switch
        android:id="@+id/switch_debug"
        android:textSize="18sp"
        android:text="@string/is_debug"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="center"
        />

    <RadioGroup
        android:id="@+id/ocr_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <RadioButton
            android:id="@+id/ocr_tesser"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:textSize="18sp"
            android:text="@string/ocr_tesser"
            />
        <RadioButton
            android:id="@+id/ocr_baidu"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:textSize="18sp"
            android:text="@string/ocr_baidu"
            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setting_cancel"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/setting_cancel"
            />

        <Button
            android:id="@+id/setting_ok"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/setting_ok"
            />
    </LinearLayout>

</LinearLayout>